tests/ui/snapshots/tools_ok.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/tools_ok/main.ward
---
exit: Some(0)
--- human ---
ok: tests/ui/tools_ok/main.ward
--- json ---
{
  "diagnostics": [],
  "file": "tests/ui/tools_ok/main.ward"
}
